fix footer on mobile

--- a/client/scss/style.scss
+++ b/client/scss/style.scss
@@ -19,11 +19,11 @@ body,
 }
 
 #footer {
+    min-height: 10%;
+    width: 100%;
     align-items: center;
     display: flex;
     justify-content: center;
-    height: 10%;
-    width: 100%;
 }
 
 .opacity-transition {
